landing page text alignment fix

--- a/src/pages/Landing/Landing.scss
+++ b/src/pages/Landing/Landing.scss
@@ -108,10 +108,6 @@
     .left-content {
       margin-left: auto;
       margin-right: auto;
-      h2,
-      h1 {
-        text-align: center;
-      }
     }
     .graphics-container {
       margin-top: 12px;
